# llm-cost-optimizer

./: README.md
LLM-Optimizer/: README.md  pyproject.toml
LLM-Optimizer/src/: example.py  production_example.py
LLM-Optimizer/src/llm_optimizer/: __init__.py  config.py  embeddings.py  metrics.py  openai_adapters.py  pipeline.py  prompt_trimmer.py  redis_cache.py  semantic_cache.py
LLM-Optimizer/src/llm_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
